# gameboy-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  app.h  cpu.cpp  cpu.h  ios_import.mm  ios_ui.cpp  main.cpp  memory.cpp  memory.h  platform.h  ppu.cpp  ppu.h
ios/: Info.plist
roms/game-roms/: Kirby's Dream Land 2 (USA, Europe) (SGB Enhanced).sav
